[tool.poetry]
name = "mMass"
version = "6.0.2"
description = ""
authors = ["Edd Salkield <edd@salkield.uk>", "Martin Strohalm"]
license = "GPL-3.0-or-later"
build = 'build.py'

packages = [
    { include = "gui" },
    { include = "mspy" },
    { include = "cx" },
    { include = "mmass.py" },
]

readme = "README.md"
homepage = "https://github.com/dreamingspires/mMass"
repository = "https://github.com/dreamingspires/mMass"

[tool.poetry.dependencies]
python = { version = "^3.7", system = true }
numpy = { version = "^1.19.0", system = true }
wxPython = { version = "^4.1.0", system = true }
xdgenvpy = { version = "^2.3.3", system = true }
requests = { version = "^2.25.1", system = true }

[tool.poetry.dev-dependencies]
pytest = { version = "^5.2", system = true }
pyinstaller = { version = "^4.0", system = true }
pywin32 = { version = "^228", platform = "win32" }
black = { version = "^20.8b1", system = true }
py2app = { version = "^0.23", platform = "darwin" }
auditwheel = { version = "^3.3.1", platform = "linux", system = true }

[tool.poetry.scripts]
mmass = "mmass:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

